k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gv-api
  namespace: gv-webstack
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gv-api
  template:
    metadata:
      labels:
        app: gv-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: gv-api
      containers:
        - name: gv-api
          image: gv-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
