k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gv-webstack-ingress
  namespace: gv-webstack
  annotations:
    nginx.ingress.kubernetes.io/load-balance: random
spec:
  ingressClassName: nginx
  rules:
    - host: gv.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gv-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gv-frontend
                port:
                  number: 80
